chore: 添加 jvm参数