@@ -1,5 +1,11 @@
 # sparkia [![CI][ciImg]][ciLink] [![STEWARD][stewardImg]][stewardLink] [![License][licenseImg]][licenseLink]
 
+由于 idea 不完全遵循 sbt 的配置
+spark 3.3.0 在 java17 下需要在 idea scalatest 模版下添加以下 vm 参数
+```
+--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
+```
+
 
 [ciImg]: https://github.com/zhaihao/sparkia/actions/workflows/ci.yml/badge.svg
 [ciLink]: https://github.com/zhaihao/sparkia/actions
